--- a/Webseiten/Sprungserver/Sprungserver.html
+++ b/Webseiten/Sprungserver/Sprungserver.html
@@ -2,7 +2,7 @@
 <tbody>
 <tr style="height: 13px;">
 <td style="width: 15.2661%; height: 23px;">
-<h2><img src="http://rmvmlng0.azubi.erni/LinuxPinguin.png" alt="" style="border-style: none; display: block; margin-left: auto; margin-right: auto;" width="54" height="64" /></h2>
+<h2><img src="http://rmvmlng0.ausbildung.md/LinuxPinguin.png" alt="" style="border-style: none; display: block; margin-left: auto; margin-right: auto;" width="54" height="64" /></h2>
 </td>
 <td style="width: 84.7339%; height: 23px;">
 <h2><strong>S</strong><strong>chulungsumgebung</strong></h2>
@@ -12,7 +12,7 @@
 </tbody>
 </table>
 <p>Nextcloud:</p>
-<p><a href="https://rmvmlnc0.azubi.erni/nextcloud" target="_blank" rel="noopener">https://rmvmlnc0.azubi.erni/nextcloud</a></p>
+<p><a href="https://rmvmlnc0.ausbildung.md/nextcloud" target="_blank" rel="noopener">https://rmvmlnc0.ausbildung.md/nextcloud</a></p>
 <p>Todoist:</p>
 <p><a href="https://todoist.com/app" target="_blank" rel="noopener">https://todoist.com/app</a></p>
 <table style="border-collapse: collapse; width: 100%; height: 200px;" border="1">
@@ -31,44 +31,44 @@
 <tr style="height: 18px;">
 <td style="width: 33.3333%; text-align: center; height: 18px;">
 <p><strong>ProxMox Server 1 (Node 0)</strong></p>
-<p><strong><a href="https://r1phlpve0.azubi.erni:8006/" target="_blank" rel="noopener">R1PHLPVE0.azubi.erni</a></strong></p>
+<p><strong><a href="https://r1phlpve0.ausbildung.md:8006/" target="_blank" rel="noopener">R1PHLPVE0.ausbildung.md</a></strong></p>
 </td>
 <td style="width: 33.3333%; text-align: center; height: 18px;">
 <p><strong>ProxMox Server 1 (Node 0)</strong></p>
-<p><strong><a href="https://rmphlpve0.azubi.erni:8006/" target="_blank" rel="noopener">RMPHLPVE0</a></strong></p>
+<p><strong><a href="https://rmphlpve0.ausbildung.md:8006/" target="_blank" rel="noopener">RMPHLPVE0</a></strong></p>
 </td>
 <td style="width: 33.3333%; text-align: center; height: 18px;"></td>
 </tr>
 <tr style="height: 18px;">
 <td style="width: 33.3333%; text-align: center; height: 18px;">
 <p><strong>ProxMox Server 2 (Node 1)</strong></p>
-<p><strong><a href="https://R1PHLPVE1.azubi.erni:8006/" target="_blank" rel="noopener">R1PHLPVE1.azubi.erni</a></strong></p>
+<p><strong><a href="https://R1PHLPVE1.ausbildung.md:8006/" target="_blank" rel="noopener">R1PHLPVE1.ausbildung.md</a></strong></p>
 </td>
 <td style="width: 33.3333%; text-align: center; height: 18px;">
 <p><strong>ProxMox Server 2 (Node 1)</strong></p>
-<p><strong><a href="https://rmphlpve1.azubi.erni:8006/" target="_blank" rel="noopener">RMPHLPVE1</a></strong></p>
+<p><strong><a href="https://rmphlpve1.ausbildung.md:8006/" target="_blank" rel="noopener">RMPHLPVE1</a></strong></p>
 </td>
 <td style="width: 33.3333%; text-align: center; height: 18px;"></td>
 </tr>
 <tr style="height: 18px;">
 <td style="width: 33.3333%; text-align: center; height: 18px;">
 <p><strong>IRMC auf Server 1</strong></p>
-<p><strong><a href="https://r1n2irmc0.azubi.erni/" target="_blank" rel="noopener">R1N2IRMC0</a></strong></p>
+<p><strong><a href="https://r1n2irmc0.ausbildung.md/" target="_blank" rel="noopener">R1N2IRMC0</a></strong></p>
 </td>
 <td style="width: 33.3333%; text-align: center; height: 18px;">
 <p><strong>IRMC auf Server 1</strong></p>
-<p><strong><a href="https://rmn1irmc0.azubi.erni/" target="_blank" rel="noopener">RMN1IRMC0</a></strong></p>
+<p><strong><a href="https://rmn1irmc0.ausbildung.md/" target="_blank" rel="noopener">RMN1IRMC0</a></strong></p>
 </td>
 <td style="width: 33.3333%; text-align: center; height: 18px;"></td>
 </tr>
 <tr style="height: 18px;">
 <td style="width: 33.3333%; text-align: center; height: 18px;">
 <p><strong>IRMC auf Server 2</strong></p>
-<p><strong><a href="https://r1n1irmc1.azubi.erni/" target="_blank" rel="noopener">R1N1IRMC1</a></strong></p>
+<p><strong><a href="https://r1n1irmc1.ausbildung.md/" target="_blank" rel="noopener">R1N1IRMC1</a></strong></p>
 </td>
 <td style="width: 33.3333%; text-align: center; height: 18px;">
 <p><strong>IRMC auf Server 2</strong></p>
-<p><strong><a href="https://rmn1irmc1.azubi.erni/" target="_blank" rel="noopener">RMN1IRMC1</a></strong></p>
+<p><strong><a href="https://rmn1irmc1.ausbildung.md/" target="_blank" rel="noopener">RMN1IRMC1</a></strong></p>
 </td>
 <td style="width: 33.3333%; text-align: center; height: 18px;"></td>
 </tr>
@@ -76,7 +76,7 @@
 <td style="width: 33.3333%; text-align: center; height: 92px;"></td>
 <td style="width: 33.3333%; text-align: center; height: 92px;">
 <p><strong>Storage unten im Rack</strong></p>
-<p><strong><a href="https://RMPHWSTO0.azubi.erni" target="_blank" rel="noopener">https://RMPHWSTO0.azubi.erni</a></strong></p>
+<p><strong><a href="https://RMPHWSTO0.ausbildung.md" target="_blank" rel="noopener">https://RMPHWSTO0.ausbildung.md</a></strong></p>
 </td>
 <td style="width: 33.3333%; text-align: center; height: 92px;"></td>
 </tr>
@@ -90,4 +90,4 @@
 </tr>
 </tbody>
 </table>
-<h4><a href="https://gateway.azubi.erni/" target="_blank" rel="noopener">Gateway</a></h4>
+<h4><a href="https://gateway.ausbildung.md/" target="_blank" rel="noopener">Gateway</a></h4>
